fix the off center layout / clean css old propertys

--- a/style.css
+++ b/style.css
@@ -1,6 +1,14 @@
+body {
+    display: grid;
+    grid-auto-flow: column;
+    justify-content: center;
+    grid-template-columns: 1fr 2fr;
+    align-content: center;
+    
+}
 html, body {
     height: 100vh;
-    margin: 0;
+    margin: 0px;
 }
 
 button {
@@ -12,34 +20,20 @@ button {
     display: grid;
     grid-template-columns: repeat(16, auto);
     grid-template-rows: repeat(16, auto);
-    height: 700px;
-    width: 700px;
-    grid-auto-rows: auto;
-    grid-auto-columns: auto;
-    justify-items: stretch;
-    margin-left: 40px;
+    height: 960px;
+    width: 960px;
 }
 
 #container >* {
     margin: 0px;
 }
 
-
-
-.containerButtons {
-    display: grid;
-    height: 100%;
-    justify-content: center;
-    align-items: center;
-    grid-template-columns: 200px 600px;
-    gap: 40px;
-    margin-right: 40px;
-}
-
 .buttons {
-    display: flex;
+    display: grid;
     flex-direction: column;
-    
+    justify-items: end;
+    margin-right: 40px;
+    align-self: center;
 }
 
 
